late refinement alignment issue

--- a/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
+++ b/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
@@ -49,6 +49,7 @@
     justify-content: center;
     margin-bottom: 1rem;
     color: #437495;
+    transform: translate(-16px);
 }
 
 :host ::ng-deep.y-caption span{
